--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all contributors to the repository.
+# This file lists team members contributoring to the repository.
 
 Alpha Ochieng <ealpha072@gmail.com>
 Sally King'oo <snzungula@gmail.com>
